--- a/app/client/main.html
+++ b/app/client/main.html
@@ -1,8 +1,7 @@
 <head>
   <meta charset="utf-8">
-  <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>meteor-application-template-react</title>
+  <title>Manoa Trade your Stuff</title>
 </head>
 
 <body class="h-100">
